working on section 2

--- a/writing/Cubert/Cubert manuscript.v3.tex
+++ b/writing/Cubert/Cubert manuscript.v3.tex
@@ -117,9 +117,9 @@ The semantics and pragmatics of predicating properties to singular individuals i
 %: however difficult the singular case, the plural case is at least $n$ times as complicated, for the $n$ many individuals under consideration. 
 Particularly puzzling is the distributive vs.~collective ambiguity of plural predcation \citep[e.g.,][]{link1983,link1987,link1998,scha1984,landman1989,landman1989b,landman1996,lasersohn1988,lasersohn1990,lasersohn1995,lasersohn1998,schwarzschild1994,schwarzschild1996}:
 
-\ex. The boxes are heavy.
-\a. The boxes each are heavy. \hfill \textsc{distributive}
-\b. The boxes together are heavy. \hfill \textsc{collective}
+\ex. \label{boxes} The boxes are heavy.
+\a. \label{boxeseach} The boxes each are heavy. \hfill \textsc{distributive}
+\b. \label{boxestogether}The boxes together are heavy. \hfill \textsc{collective}
 
 When hearing \Last we may infer that each box on its own counts as heavy, as in \Last[a], or only that their total weight is heavy, as in \Last[b].
 %if we hear that \emph{the boxes are heavy}, do we infer that each box is, or only that their total weight warrants comment? 
@@ -164,13 +164,11 @@ Following up on our corpus findings, we then explore the idea that contextual pr
 %
 %\subsection{Stubborn distributivity}
 
-\ndg{Oy, this section is still long and meandering. it should be half this length.}
+When complaisantly collective gradable predicates like \emph{heavy} (also \emph{expensive}, \emph{voluminous}) are used in plural predications the meaning is ambigious. Under a distributive reading, \ref{boxeseach}, the relevant property gets ascribed to each member of the plural subject. Under a collective reading, \ref{boxestogether}, we ascribe the property to the subject as a whole---in the case of \ref{boxes} commenting on the total weight of the boxes; many light boxes may together count as heavy \citep{scha1984}.
 
-Complaisantly collective gradable predicates like \emph{heavy} (also \emph{expensive}, \emph{voluminous}) are transparently ambiguous in plural predications. Under a distributive reading, \Next[a], the relevant property gets ascribed to each member of the plural subject. Under a collective reading, \Next[b], we ascribe the property to the subject as a whole, commenting on the total weight of the boxes; many light boxes may together count as heavy \citep{scha1984}.
-
-\ex. The boxes are heavy.
-\a. The boxes each are heavy. \hfill \textsc{distributive}
-\b. The boxes together are heavy. \hfill \textsc{collective}
+%\ex. The boxes are heavy.
+%\a. The boxes each are heavy. \hfill \textsc{distributive}
+%\b. The boxes together are heavy. \hfill \textsc{collective}
 
 %In this latter case, where we collectively ascribe a gradable property directly to a plurality, the resulting interpretation involves sum-based aggregation strategies: if a set of boxes together holds the property of being heavy, it follows that their total weight counts as heavy \citep{scha1984}.\footnote{For now we set aside the possibility of mean-based aggregation strategies, demonstrated for plural comparisons of size by \cite{scontrasetal2012}. Given the effect of contextual predictability on sum-based aggregation strategies that we herewith elucidate, the previously demonstrated mean-based strategies likely result from an experimental context that suggested collective interpretations for \emph{bigger} and a recognition on the part of participants that average size was sufficiently predictable in that context. \ndg{perhaps move this to discussion and discuss more transparently?}} The reading becomes more transparent when we add a collective particle like \emph{together}, as in \Last[b]. Crucially, a collective reading can be true when the distributive reading is false: many light boxes may together count as heavy. These two diverging interpretations suggest a semantics for the gradable predicate \emph{heavy} under which it applies both to singular objects and pluralities in its basic denotation; it is a mixed predicate (cf.~the example \emph{build a raft} from \citealp{link1983}). 
 
@@ -186,11 +184,16 @@ Size and shape adjectives (e.g., \emph{tall}, \emph{long}, \emph{round}) resist 
 %In his discussion of the contrast, \citet{quine1960} describes stubbornly distributive predicates like \emph{big} in \Last as ``not cumulative,'' drawing a parallel with the nominal domain: just as a count noun like \emph{boxes} insistently ``divides its reference'' among individual boxes (in contrast to mass nouns like \emph{water} which are aggressively cumulative, referring to maximal salient quantities of water), so too do stubbornly distributive predicates divide their predication to individuals. \citeauthor{quine1960}'s characterization of the phenomenon prefigures the formal semantics that follows him. 
 
 Collective predication arises when a property is ascribed directly to a plurality, rather than distributed among its members \citep{link1983}. Semanticists hold that stubbornly distributive predicates behave as such because they cannot contain pluralities in their basic denotations \citep{schwarzschild2011,vazquezrojas2012,zhang2013}.\footnote{In his characterization of stubborn distributivity, Schwarzschild first assumes that gradable adjectives are predicates of events \citep[e.g.,][]{higginbothamschein1989}. Thus, \emph{heavy} predicates over \textsc{heavy} events, \emph{big} over \textsc{big} events, etc. For \citeauthor{schwarzschild2011}, stubbornly distributive predicates are those that require their events to have only single participants. The details are not directly relevant for our purposes; what is relevant is the lexical distinction \citeauthor{schwarzschild2011} and others make between stubbornly distributive and complaisantly collective predicates.}
-However, stating that stubbornly distributive predicates do not compose directly with pluralities serves merely to describe the phenomenon, not to explain it.
+This explanation suffers two flaws:
+First, it hypothesizes a categorical distinction that may not hold; in Expt.~2 we find a gradient of collectivity, with no clear boundary.
+Second, it leaves unexplained why some predicates would contain pluralities and others not---is there a deeper explanation in terms of the properties named?
+%stating that stubbornly distributive predicates do not compose with pluralities serves merely to describe the phenomenon, not to explain it.
+%Something about these predicates, or the properties they name, must determine their behavior in plural predication. The task at hand is to determine what that thing is. 
+
+
 %Since \cite{link1983}, semanticists have been aware of necessarily distributive predicates like \emph{have blue eyes} or \emph{be a man}.  \ndg{awk} Having blue eyes or being a man are properties that necessarily hold of individuals, hence their mandatory distributivity. But collective size is not such a property, at least not transparently so. There is no conceptual barrier to attributing some size directly to a plurality of individuals. Collective nouns bring this point into focus: if a group of men has blue eyes, then each member must; if a pile of boxes counts as tall, we make no direct claim about individual box heights.
 %\ex. \a. The group of men has blue eyes. 
 %\b. The pile of boxes is tall.
-Something about these predicates or the properties they name must influence or determine their behavior in plural predication. The task at hand is to determine what that thing is. 
 
 %\subsection{The role of context in plural predication}
 
@@ -200,7 +203,15 @@ Something about these predicates or the properties they name must influence or d
 %Not all predicates are so permissive in their interpretations: \textit{the boxes are big} is said to communicate only about individual box size; the collective interpretation whereby speakers communicate about total set size is claimed to be absent (or at least extremely hard to come by). Other size and shape predicates are said to behave similarly.
 
 %Understanding why (and whether) stubbornly distributive predicates like \emph{big} pattern separately from what we will call ``complaisantly collective'' predicates like \emph{heavy} requires a closer look at the differences between these classes of predicates. 
-The salient different between complaisantly collective \emph{heavy} and stubbornly distributive \emph{big} seems to be the contextual predictability of the collective properties they name: the former names a maximally stable and predictable property, collective weight; to change the collective weight of a set, one would have to change the weight of an individual member. In contrast, \emph{big} names a collective property that could change with every new arrangement of the individuals said to hold it. The instability inherent to the collective properties named by stubbornly distributive predicates, instability that we are attuned to given our knowledge of the broader world context (i.e., knowledge of how the properties behave), supplies a ready split between these two classes of predicates. Where a property is less predictable on the basis of context, collective interpretations are noisier---they require more coordination between speakers and listeners to arrive at the same judgments about the property of interest. When coordination fails, miscommunication arises.
+We suggest that the key underlying notion is the stability or \emph{contextual predictability} of a property when applied to a collection.
+For instance, collective \emph{tall} names the vertical extent of a set of objects, and can vary dramatically with their arrangement.
+In contrast, collective \emph{heavy} names the total weight of a set of objects, which doesn't vary with arrangement. 
+If the precise arrangement is not in common ground then the collective use of \emph{tall} would be more likely to mislead a listener than that of \emph{heavy} (in contrast, the distributive meaning of each is specified, independent of arrangement). A listener would thus not expect a cooperative speaker to intend the collective meaning of \emph{tall}.
+%Many aspects of a predicate's meaning, beyond arrangement, could give rise to similar effects
+
+%One difference between complaisantly collective \emph{heavy} and stubbornly distributive \emph{big} is the contextual predictability of the collective properties they name: the former names a maximally stable and predictable property, collective weight; to change the collective weight of a set, one would have to change the weight of an individual member. In contrast, \emph{big} names a collective property that could change with every new arrangement of the individuals said to hold it. 
+
+%The instability inherent to the collective properties named by stubbornly distributive predicates, instability that we are attuned to given our knowledge of the broader world context (i.e., knowledge of how the properties behave), supplies a ready split between these two classes of predicates. Where a property is less predictable on the basis of context, collective interpretations are noisier---they require more coordination between speakers and listeners to arrive at the same judgments about the property of interest. When coordination fails, miscommunication arises.
 
 %Consider the complaisantly collective predicate \emph{heavy}, which names the property of being heavy. 
 %With a plural subject under a collective construal, \emph{heavy} comments on total set weight.  Suppose we encounter a set of boxes piled one on top of the other. Those boxes will have a collective weight, and depending on that weight those boxes may or may not count as collectively heavy. Now, suppose we encounter that same set of boxes, this time lined up one next to the other. Despite changing the physical arrangement of the set of boxes, their weight remains the same.  Collective weight is a stable property of sets. Another complaisantly collective predicate, \emph{voluminous}, behaves similarly: the volume of a set of objects remains unchanged despite varying physical arrangement. So too for \emph{expensive} and any other complaisantly collective gradable predicate: the collective property is regular and predictable on the basis of context; rearranging the members of a plurality has no effect on the collective property itself.
@@ -212,7 +223,17 @@ The salient different between complaisantly collective \emph{heavy} and stubborn
 %We appear to have a continuum of stubborn distributivity, or, perhaps better put, a continuum of collectivity for gradable predicates. At issue is the contextual predictability of the collective property these predicates name, which determines how noisy the collective interpretations will be. Where a property is less predictable on the basis of context, collective interpretations are noisier---they require more coordination between speakers and listeners to arrive at the same judgments about the property of interest. When coordination fails, miscommunication arises. %In other words, our---speakers' and listeners'---judgments about the truth of a collective interpretation might not align for stubbornly distributive predicates if we do not encounter the same arrangement of individuals. 
 %Noisy collective interpretations are less useful at communicating the speaker's intended message; they should therefore be less likely. With complaisantly collective predicates, the named properties are maximally predictable and therefore their collective interpretations are minimally noisy. These interpretations are therefore more likely.
 
-Here is the hypothesis: collective interpretations are susceptible to varying amounts of noise depending on the contextual predictability of the property at issue; less predictable collective properties yield noisier collective interpretations because judgments by speakers and listeners might not align. Language is used to communicate. Speakers aspire toward clarity in this process of communication. With a stubbornly distributive predicate, the property a speaker makes reference to might change depending on the arrangement of the things said to hold it. To communicate effectively and avoid possible confusion, collective interpretations should be avoided in the case of such noisy predicates; distributive interpretations are the safe bet. In other words, collective interpretations become more likely as contextual predictability of the collective property----that is, the retrievability of the intended message---increases. 
+Here is the general hypothesis: collective interpretations are susceptible to varying amounts of noise depending on the contextual predictability of the property at issue.
+%; less predictable collective properties yield noisier collective interpretations because judgments by speakers and listeners might not align. 
+%Language is used to communicate. Speakers aspire toward clarity in this process of communication. 
+%With a stubbornly distributive predicate, the property a speaker makes reference to might change depending on the arrangement of the things said to hold it. 
+To communicate effectively and avoid possible confusion, collective interpretations will be avoided by speakers in the case of such noisy predicates; distributive interpretations being less variable are the safe bet. 
+Listeners know this, hence collective interpretations will become more likely as contextual predictability of the collective property----that is, the retrievability of the intended message---increases.
+This would explain the phenomenon of stubborn distributivity in terms of the relative unpredictability of the collective property for predicates like \emph{big}.
+It also predicts that context should matter: in a context where the collective property is more stable, the collective reading should be more felicitous.
+ 
+\ndg{i wonder whether it's worth explicitly tying this to subjectivity?}
+\ndg{we haven't define contextual predictability very clearly. i expect reviewers to be bothered by that...}
 
 %The introduction of structure into, or the removal of variability from the context of predication should increase the viability of collective interpretations: 
 If physical arrangements are less likely to change, collective properties become more predictable on the basis of context, and so collective interpretations become less noisy. As a result, these interpretations become more useful, and therefore more likely. This reasoning underlies the intuition, which we test experimentally, that if sets of boxes always assume the same arrangement (say, they are always stacked on top of each other), suddenly using stubbornly distributive \emph{big} to discuss their collective size feels much more natural.
