working on section 2

--- a/writing/Cubert/Cubert manuscript.v3.tex
+++ b/writing/Cubert/Cubert manuscript.v3.tex
@@ -204,6 +204,7 @@ Second, it leaves unexplained why some predicates would contain pluralities and 
 
 %Understanding why (and whether) stubbornly distributive predicates like \emph{big} pattern separately from what we will call ``complaisantly collective'' predicates like \emph{heavy} requires a closer look at the differences between these classes of predicates. 
 We suggest that the key underlying notion is the stability or \emph{contextual predictability} of a property when applied to a collection.
+\ndg{need to define contextual predictability clearly here. say it's a property of the denotation, not the ambiguous surface form.}
 For instance, collective \emph{tall} names the vertical extent of a set of objects, and can vary dramatically with their arrangement.
 In contrast, collective \emph{heavy} names the total weight of a set of objects, which doesn't vary with arrangement. 
 If the precise arrangement is not in common ground then the collective use of \emph{tall} would be more likely to mislead a listener than that of \emph{heavy} (in contrast, the distributive meaning of each is specified, independent of arrangement). A listener would thus not expect a cooperative speaker to intend the collective meaning of \emph{tall}.
@@ -228,26 +229,40 @@ Here is the general hypothesis: collective interpretations are susceptible to va
 %Language is used to communicate. Speakers aspire toward clarity in this process of communication. 
 %With a stubbornly distributive predicate, the property a speaker makes reference to might change depending on the arrangement of the things said to hold it. 
 To communicate effectively and avoid possible confusion, collective interpretations will be avoided by speakers in the case of such noisy predicates; distributive interpretations being less variable are the safe bet. 
-Listeners know this, hence collective interpretations will become more likely as contextual predictability of the collective property----that is, the retrievability of the intended message---increases.
+Listeners know this, hence collective interpretations will become more likely as contextual predictability of the collective property increases.
 This would explain the phenomenon of stubborn distributivity in terms of the relative unpredictability of the collective property for predicates like \emph{big}.
 It also predicts that context should matter: in a context where the collective property is more stable, the collective reading should be more felicitous.
  
-\ndg{i wonder whether it's worth explicitly tying this to subjectivity?}
-\ndg{we haven't define contextual predictability very clearly. i expect reviewers to be bothered by that...}
-
 %The introduction of structure into, or the removal of variability from the context of predication should increase the viability of collective interpretations: 
-If physical arrangements are less likely to change, collective properties become more predictable on the basis of context, and so collective interpretations become less noisy. As a result, these interpretations become more useful, and therefore more likely. This reasoning underlies the intuition, which we test experimentally, that if sets of boxes always assume the same arrangement (say, they are always stacked on top of each other), suddenly using stubbornly distributive \emph{big} to discuss their collective size feels much more natural.
-Finding such a connection between contextual predictability of collective properties and rates of collective interpretations for stubbornly distributive predicates, we would have evidence that the phenomenon of stubborn distributivity is not a simple lexical distinction, but rather emerges as a result of rational inferences between speakers and listeners as they endeavor to communicate efficiently. %Moreover, given that complaisantly collective predicates name properties that are already maximally predictable, we should not expect to be able to increase the contextual predictability of their collective properties and thereby increase their rates of collective interpretations.
+For physical properties, the physical arrangement is a key element of context. If arrangements are less likely to change, collective properties become more predictable, and so collective interpretations become more useful and more likely. 
+We test this prediction in Expt.~3, measuring whether the collective \emph{big} and \emph{tall} indeed feel more natural for blocks that are always stacked regularly than for jumbled piles of blocks.
+More generally, some types of objects may have more predictable collective properties than others.
+This leads to the prediction that the nouns which serve as objects in a plural predication should also affect the likelihood of collective interpretation. \ndg{put an example back here?}
+In Expt.~2 we test whether this is the case for a variety of predicates.
 
-Once we consider the complex interaction between speakers and listeners, we open the door to the influence of context at many levels. We have seen how properties of the broader world context (i.e., contextual predictability of collective properties) might serve to disambiguate between stubbornly distributive and complaisantly collective predicates. We have also encountered, albeit indirectly, the influence of the local linguistic context on this disambiguation: different predicates privilege different interpretations by virtue of the contextual predictability of the properties they name (cf.~\emph{big} vs.~\emph{heavy}). Also at play in the local linguistic context are the nouns that serve as the subjects to these predicates. As with the properties named by  predicates, the objects named by  subject nouns might affect contextual predictability by virtue of how regularly they instantiate in the world. If we could find objects that instantiate in regular physical arrangements (e.g., shelves or waves) or with no physical arrangement at all (e.g., numbers or ideas), we might expect stubbornly distributive predicates to more readily admit collective interpretations when the nouns that name these objects serve as subject. %As with contextual predictability, we test this intuition experimentally below.  
+%This reasoning underlies the intuition, which we test experimentally, that if sets of boxes always assume the same arrangement (say, they are always stacked on top of each other), suddenly using stubbornly distributive \emph{big} to discuss their collective size feels much more natural.
+%Finding such a connection between contextual predictability of collective properties and rates of collective interpretations for stubbornly distributive predicates, we would have evidence that the phenomenon of stubborn distributivity is not a simple lexical distinction, but rather emerges as a result of rational inferences between speakers and listeners as they endeavor to communicate efficiently. %Moreover, given that complaisantly collective predicates name properties that are already maximally predictable, we should not expect to be able to increase the contextual predictability of their collective properties and thereby increase their rates of collective interpretations.
+%
+%Once we consider the complex interaction between speakers and listeners, we open the door to the influence of context at many levels. We have seen how properties of the broader world context (i.e., contextual predictability of collective properties) might serve to disambiguate between stubbornly distributive and complaisantly collective predicates. We have also encountered, albeit indirectly, the influence of the local linguistic context on this disambiguation: different predicates privilege different interpretations by virtue of the contextual predictability of the properties they name (cf.~\emph{big} vs.~\emph{heavy}). 
+%Also at play in the local linguistic context are the nouns that serve as the subjects to these predicates. As with the properties named by  predicates, the objects named by  subject nouns might affect contextual predictability by virtue of how regularly they instantiate in the world. If we could find objects that instantiate in regular physical arrangements (e.g., shelves or waves) or with no physical arrangement at all (e.g., numbers or ideas), we might expect stubbornly distributive predicates to more readily admit collective interpretations when the nouns that name these objects serve as subject. %As with contextual predictability, we test this intuition experimentally below.  
 
-%Contextual predictability affects availability of collective interpretations to the extent that speakers and listeners attend to each other as they communicate: unpredictable properties are poor candidates for efficient communication, given the amount of increased coordination they necessitate. Once we start 
-One last level of context remains: the immediate discourse context, specifically properties of the speakers and listeners themselves. As with world and linguistic context, this factor determines not the possible, but the \emph{probable} interpretations of plural predications: changing the speaker's epistemic state ought to influence the resulting disambiguation between distributive and collective interpretations. 
+We are arguing for an explanation of plural predication in which ambiguity is resolved by pragmatic reasoning: the usefulness of each reading is determined partly by its contextual predictability, and readings which would be more useful on these grounds are preferred. 
+This pragmatic view entails that other standard pragmatic pressures should come to bear, affecting the felicity of the collective (and distributive) interpretation.
+To whit, changing the speaker's epistemic state ought to influence the resulting disambiguation between distributive and collective interpretations. 
 If a speaker lacks evidence that would verify a specific interpretation, and if a listener knows this about the speaker, then that unsupported interpretation should be particularly improbable. This intuition derives straightforwardly from the Maxim of Quality from \cite{grice1975}: ``Do not say that for which you lack adequate evidence.'' 
-%Imagine that a speaker lifts a set of boxes altogether (not individually), and that a listener sees this. Weight is not a visually assessable property, so the speaker would lack access the individual box weights. If the speaker then tells the listener that the boxes were heavy, the listener ought to be able to reason about the limited epistemic state of the speaker to conclude that the speaker intended a collective interpretation: the speaker lacked information that would verify a distributive interpretation, so he must not have intended it.  
-%Thus, while the predictability of collective weight remains a stable property of the context, we may further privilege collective interpretations by limiting speakers' access to the evidence they would need to verify a distributive interpretation. 
-%Conversely, we may privilege distributive interpretations by highlighting distributive knowledge, for example by watching a speaker pick up boxes one at a time. Like contextual predictability, the influence of speaker knowledge should succeed to the extent that speakers and listeners are reasoning about each other as they use language to communicate. 
-%Note that because properties of physical extent are visually assessable (and therefore accessible), we cannot manipulate speakers' knowledge of them so easily. If a speaker can see the boxes, he can see both their individual sizes and shapes, as well as their collective size and shape. Contrary to the predictions of contextual predictability, here we would expect to find an effect of speaker access to knowledge for complaisantly collective, but not stubbornly distributive predicates.
+We explore this prediction first in Expt.~1 and then more systematically in Expt.~3.
+
+
+
+%%Contextual predictability affects availability of collective interpretations to the extent that speakers and listeners attend to each other as they communicate: unpredictable properties are poor candidates for efficient communication, given the amount of increased coordination they necessitate. Once we start 
+%One last level of context remains: the immediate discourse context, specifically properties of the speakers and listeners themselves. As with world and linguistic context, this factor determines not the possible, but the \emph{probable} interpretations of plural predications: 
+%
+%changing the speaker's epistemic state ought to influence the resulting disambiguation between distributive and collective interpretations. 
+%If a speaker lacks evidence that would verify a specific interpretation, and if a listener knows this about the speaker, then that unsupported interpretation should be particularly improbable. This intuition derives straightforwardly from the Maxim of Quality from \cite{grice1975}: ``Do not say that for which you lack adequate evidence.'' 
+%%Imagine that a speaker lifts a set of boxes altogether (not individually), and that a listener sees this. Weight is not a visually assessable property, so the speaker would lack access the individual box weights. If the speaker then tells the listener that the boxes were heavy, the listener ought to be able to reason about the limited epistemic state of the speaker to conclude that the speaker intended a collective interpretation: the speaker lacked information that would verify a distributive interpretation, so he must not have intended it.  
+%%Thus, while the predictability of collective weight remains a stable property of the context, we may further privilege collective interpretations by limiting speakers' access to the evidence they would need to verify a distributive interpretation. 
+%%Conversely, we may privilege distributive interpretations by highlighting distributive knowledge, for example by watching a speaker pick up boxes one at a time. Like contextual predictability, the influence of speaker knowledge should succeed to the extent that speakers and listeners are reasoning about each other as they use language to communicate. 
+%%Note that because properties of physical extent are visually assessable (and therefore accessible), we cannot manipulate speakers' knowledge of them so easily. If a speaker can see the boxes, he can see both their individual sizes and shapes, as well as their collective size and shape. Contrary to the predictions of contextual predictability, here we would expect to find an effect of speaker access to knowledge for complaisantly collective, but not stubbornly distributive predicates.
 
 To test these various predictions concerning the role of context in plural predication, we must first establish a way of studying plural predication experimentally; that is, a way to unambiguously access distributive vs.~collective interpretations. To that end, in Expt.~1, we show that the particles \emph{each} and \emph{together} reliably disambiguate plural predication. %In Expt.~2, we apply this disambiguation method to a broad range of linguistic contexts from naturally-occurring examples of plural predication from corpora. In Expt.~3, we again employ this disambiguation method, this time directly manipulating contextual predictability and speaker access to knowledge.
 
